force-app/main/default/objects/SBQQ__PriceRule__c/fields/SBQQ__Active__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this rule is active or not.</description>
        <inlineHelpText>Indicates whether this rule is active or not.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </CustomField>