force-app/main/default/objects/SBQQ__PriceRule__c/fields/SBQQ__ConfiguratorEvaluationEvent__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ConfiguratorEvaluationEvent__c</fullName>
        <description>Event that specifies when Price Rules should be fired.</description>
        <inlineHelpText>When None or Save is selected, the Configurator scoped price rules will fire on save.  When Edit is selected, the Configurator scoped price rules will fire on edit and save.</inlineHelpText>
        <label>Configurator Evaluation Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Save</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>