force-app/main/default/objects/SBQQ__PriceRule__c/fields/SBQQ__LookupObject__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__LookupObject__c</fullName>
        <description>API Name of the Custom Object that stores the lookup data.</description>
        <inlineHelpText>API Name of the Custom Object that stores the lookup data.</inlineHelpText>
        <label>Lookup Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__LookupData__c</fullName>
                </value>
                <value>
                    <fullName>Price_Glossary__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__DiscountTier__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__DiscountSchedule__c</fullName>
                </value>
                <value>
                    <fullName>DiscountScheduleMapping__c</fullName>
                </value>
                <value>
                    <fullName>Currency_Conversion__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__BlockPrice__c</fullName>
                </value>
                <value>
                    <fullName>Regional_Pricing_Adjustment_Table__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__QuoteLine__c</fullName>
                </value>
                <value>
                    <fullName>People_Cost__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>