force-app/main/default/objects/SBQQ__PriceRule__c/fields/SBQQ__Product__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optional field that makes this rule specific to the product.</description>
        <inlineHelpText>Choose a product to associate to this rule.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Price Rules</relationshipLabel>
        <relationshipName>PriceRules</relationshipName>
        <type>Lookup</type>
    </CustomField>